Fixed some problems with attribute names that are too long.

--- a/src/common/featuremanager/style/featuremanager.less
+++ b/src/common/featuremanager/style/featuremanager.less
@@ -150,6 +150,8 @@ body:last-child {
 
 .custom-control-label {
   color: @controlLabelFontColor;
+  width: 90%;
+  word-wrap: break-word;
 }
 
 .custom-form-control {
