--- a/src/common/layers/style/layers.less
+++ b/src/common/layers/style/layers.less
@@ -46,6 +46,12 @@
   }
 }
 
+.attribute-value {
+  width: 75%;
+  float: left;
+  padding-top: 3px;
+}
+
 .layer-visible-button.layer-visible {
   background-color: @layerVisibleColor;
   color: @layerVisibleImageColor;
